kubernetes/frontend-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend
  labels:
    app: maskcity
spec:
  selector:
    matchLabels:
      app: maskcity
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: maskcity
        tier: frontend
    spec:
      containers:
      - name: hugo-php
        image: ronniek/mask-city:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
