kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: maskcity
    tier: frontend
spec:
  ports:
  - name: http
    targetPort: 80    
    port: 80
  selector:
    app: maskcity
    tier: frontend
